# feelingdrones

./: .gitignore  README.md  backup_flight.params  force_sensor.py  main.py
Manipulator/feelingdrones/engineering/: __init__.py  constants.py  control_matrix.py  dynamics.py  robotics.py
Manipulator/feelingdrones/scripts/: contact_points.py  spring_constants.py
Manipulator/feelingdrones/visual/: plotting.py
Manipulator/wolfram/: Jacobian.nb  Lagrange.nb
custom_msgs/ws/src/feelingdrones_msgs/: CMakeLists.txt  package.xml
custom_msgs/ws/src/feelingdrones_msgs/msg/: StampedInt32MultiArray.msg  StampedInt8MultiArray.msg
force_sensor/: force_sensor.py  sensor.py  serial_mini_45.py
offboard/: common.py  constants.py  data_loader.py  events_plot.py  grasp_distribution.py  offset.json  offset_plot.py  open_loop_plot.py  plotter.py  tactile_plot.py  tactile_plot_video.py  temp.py  test.py
offboard/ws/src/tf2_broadcasters/: package.xml  setup.cfg  setup.py
offboard/ws/src/tf2_broadcasters/launch/: tf2_broadcaster.launch.py
offboard/ws/src/tf2_broadcasters/tf2_broadcasters/: tf2_broadcaster.py
px4_logger/: animated_trajectory.py  bag_csv.py  common.py  constants.py  data_loader.py  grasp_distribution.py  log_scraper.py  multi_spider_2Dplot.py  offset.json  offset_plot.py  playground.py  plotter.py  search_trajectory_visualizer.py  single_spider_2Dplot.py  spider_2Dplot.py  spider_3Dplot.py  spider_plot.py  tactile_plot.py  tactile_plot_video.py  test.py  trajectory_plot.py  video_working.py
px4_logger/bag_files/: test_bag_1.db3
raspberry-pi-code/: Dockerfile  entrypoint.sh  servos.Dockerfile  servos.sh  touch.sh
raspberry-pi-code/ws/src/custom_msgs/msg/: StampedInt8MultiArray.msg
raspberry-pi-code/ws/src/mpr121_pubsub/: package.xml  setup.cfg  setup.py
raspberry-pi-code/ws/src/mpr121_pubsub/mpr121_pubsub/: publisher_function.py  subscriber_function.py
raspberry-pi-code/ws/src/mpr121_pubsub/msg/: StampedInt32MultiArray.msg  StampedInt8MultiArray.msg
raspberry-pi-code/ws/src/raspberry_drivers/: package.xml  setup.cfg  setup.py
raspberry-pi-code/ws/src/raspberry_drivers/launch/: raspberry_drivers.launch.py
raspberry-pi-code/ws/src/sts302_motor_driver/: package.xml  setup.cfg  setup.py
raspberry-pi-code/ws/src/sts302_motor_driver/sts302_motor_driver/: motor_controller.py  set_motor_position.py
raspberry-pi-code/ws/src/sts3032_motor_driver/: setup.py
raspberry-pi-code/ws/src/sts3032_motor_driver/sts3032_motor_driver/: motor_actuator.py  motor_controller.py  motor_touch_controller.py
ros2-app/: .dockerignore  Dockerfile  entrypoint.sh
ros2-app/ws/: test.txt
ros2-app/ws/src/: .gitignore
ros2-app/ws/src/controllers/: CMakeLists.txt  package.xml
ros2-app/ws/src/controllers/include/controllers/: open_loop_perch.cpp  open_loop_perch.hpp  position_reference.hpp  tactile_controller.hpp
ros2-app/ws/src/controllers/src/: open_loop_perch.cpp  position_hover.cpp  position_reference.cpp  tactile_controller.cpp
ros2-app/ws/src/controllers/worlds/: cyberzoo.world
ros2-app/ws/src/custom_msgs/: CMakeLists.txt  package.xml
ros2-app/ws/src/custom_msgs/msg/: StampedInt8.msg  StampedInt8MultiArray.msg
ros2-app/ws/src/data_mocker/: package.xml  setup.cfg  setup.py
ros2-app/ws/src/data_mocker/data_mocker/: close_gripper.py  gripper_mocker.py  gripper_open_close.py  mpr121_mocker.py  open_gripper.py
ros2-app/ws/src/observers/: CMakeLists.txt  package.xml
ros2-app/ws/src/observers/include/observers/: mocap_forwarder.hpp
ros2-app/ws/src/observers/src/: mocap_forwarder.cpp
ros2-app/ws/src/px4_sim/: CMakeLists.txt  package.xml
ros2-app/ws/src/px4_sim/launch/: gazebo_px4.launch.py  px4_sim.launch.py
ros2-app/ws/src/simulation/: CMakeLists.txt  package.xml
ros2-app/ws/src/simulation/launch/: sim.launch.py
teensy-code/servo_esc_control_w_feedback_T4_PPZ/: DSHOT.cpp  Definitions.h  ESCCMD.cpp  ESCCMD.h  servo_esc_control_w_feedback_T4_PPZ.ino
test_force_sensor/: test.txt
